--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
     <body>
         <header>
             <div class="social-links">
-                <a href="https://www.instagram.com/juwake14/" target="_blank"><img src="instagram.webp" alt="Instagram"></a>
-                <a href="https://www.facebook.com/julien.hee.7" target="_blank"><img src="facebook.png" alt="Facebook"></a>
-                <a href="https://www.google.com" target="_blank"><img src="googleicon.png" alt="Google"></a>
-                <a href="https://www.tripadvisor.fr/Restaurant_Review-g1939770-d4586740-Reviews-Au_Pere_Tranquille-Bernieres_sur_Mer_Calvados_Basse_Normandie_Normandy.html" target="_blank"><img src="tripadvisor.png" alt="Tripadvisor"></a>
+                <a href="https://www.instagram.com/juwake14/" target="_blank"><img src="reseausociaux/instagram.webp" alt="Instagram"></a>
+                <a href="https://www.facebook.com/julien.hee.7" target="_blank"><img src="reseausociaux/facebook.png" alt="Facebook"></a>
+                <a href="https://www.google.com" target="_blank"><img src="reseausociaux/googleicon.png" alt="Google"></a>
+                <a href="https://www.tripadvisor.fr/Restaurant_Review-g1939770-d4586740-Reviews-Au_Pere_Tranquille-Bernieres_sur_Mer_Calvados_Basse_Normandie_Normandy.html" target="_blank"><img src="reseausociaux/tripadvisor.png" alt="Tripadvisor"></a>
             </div>
             <div class="burger-menu" id="burgerMenu">
                 <div class="line"></div>
@@ -26,9 +26,9 @@
         </header>
         <div class="main">
             <div class="container">
-                <img src="lepetitbistrotrestaurant.jpg" alt="Photo de mon restaurant" class="background-image">
+                <img src="Restaurant/lepetitbistrotrestaurant.jpg" alt="Photo de mon restaurant" class="background-image">
                 <div class="overlay">
-                    <img src="lepetitbistrotlogo.png">
+                    <img src="Restaurant/lepetitbistrotlogo.png">
                     <button class="menu-button" onclick="location.href='menu.html'">Menu</button>
             </div>
         </main>
