--- a/menu.html
+++ b/menu.html
@@ -15,13 +15,13 @@
             Le Petit Bistrot
         </span>
         <div class="social-links">
-            <a href="https://www.instagram.com/juwake14/" target="_blank"><img src="instagram.webp" alt="Instagram"></a>
-            <a href="https://www.facebook.com/julien.hee.7" target="_blank"><img src="facebook.png" alt="Facebook"></a>
-            <a href="https://www.google.com" target="_blank"><img src="googleicon.png" alt="Google"></a>
-            <a href="https://www.tripadvisor.fr/Restaurant_Review-g1939770-d4586740-Reviews-Au_Pere_Tranquille-Bernieres_sur_Mer_Calvados_Basse_Normandie_Normandy.html" target="_blank"><img src="tripadvisor.png" alt="Tripadvisor"></a>
+            <a href="https://www.instagram.com/juwake14/" target="_blank"><img src= "reseausociaux/instagram.webp" alt="Instagram"></a>
+            <a href="https://www.facebook.com/julien.hee.7" target="_blank"><img src="reseausociaux/facebook.png" alt="Facebook"></a>
+            <a href="https://www.google.com" target="_blank"><img src="reseausociaux/googleicon.png" alt="Google"></a>
+            <a href="https://www.tripadvisor.fr/Restaurant_Review-g1939770-d4586740-Reviews-Au_Pere_Tranquille-Bernieres_sur_Mer_Calvados_Basse_Normandie_Normandy.html" target="_blank"><img src="reseausociaux/tripadvisor.png" alt="Tripadvisor"></a>
         </div>
     </header>
-    <img src="photoequipe.jpg" alt="Photo de mon restaurant" class="background-image">
+    <img src="Restaurant/photoequipe.jpg" alt="Photo de mon restaurant" class="background-image">
     <main>
         <div class="intro">
             <p>Bienvenue dans notre restaurant, le Petit Bistrot. Ici, tout nos plats sont fait maison et avec amour par notre chef Julien. Vous retrouverez tout nos plats ainsi que les allergènes plus bas. <br>
@@ -41,7 +41,7 @@
             
             <div id="product-container">
                 <div class="card" data-category="Planches">
-                    <img src="plateau-charcuterie-1.jpg" alt="Produit 1" class="product-image">
+                    <img src="Planches/plateau-charcuterie-1.jpg" alt="Produit 1" class="product-image">
                     <div class="content">
                         <h2>Plateau Charcuterie</h2>
                         <p>Magnifique planche de charcuterie avec chorizo, saucissons, jambons de bayonne et cornichons</p>
@@ -52,7 +52,7 @@
                 </div>
     
                 <div class="card" data-category="Tapas">
-                    <img src="onion rings sauce barbecue.jpg" alt="Produit 1" class="product-image">
+                    <img src="Tapas/onion rings sauce barbecue.jpg" alt="Produit 1" class="product-image">
                     <div class="content">
                         <h2>Onion Rings</h2>
                         <p>8 Pièces de délicieux onion rings à partager (ou non)</p>
