--- a/menu.html
+++ b/menu.html
@@ -10,6 +10,7 @@
 </head>
 <body>
     <header>
+        <!-- <img src="Restaurant/photoequipe.jpg" alt="Photo de mon restaurant" class="background-image"> -->
         <img id="backButton" src="back_button.png" alt="Retour" onclick="goBack()">
         <span class="titre">
             Le Petit Bistrot
@@ -21,13 +22,10 @@
             <a href="https://www.tripadvisor.fr/Restaurant_Review-g1939770-d4586740-Reviews-Au_Pere_Tranquille-Bernieres_sur_Mer_Calvados_Basse_Normandie_Normandy.html" target="_blank"><img src="reseausociaux/tripadvisor.png" alt="Tripadvisor"></a>
         </div>
     </header>
-    <img src="Restaurant/photoequipe.jpg" alt="Photo de mon restaurant" class="background-image">
-    <main>
         <div class="intro">
             <p>Bienvenue dans notre restaurant, le Petit Bistrot. Ici, tout nos plats sont fait maison et avec amour par notre chef Julien. Vous retrouverez tout nos plats ainsi que les allergènes plus bas. <br>
                 Bonne dégustation à vous !</p>
             </div>
-        </main>
             
             <div class="button-container">
                 <button onclick="filterCategory('all')" class="category-button">All</button>
